--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    // Glide https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
-    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.9.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
     //Dagger 2
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -48,7 +45,11 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     //RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // Glide https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.9.0'
     //Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //Subsampling Scale Image View
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
 }
